--- a/TintVision/AndroidManifest.xml
+++ b/TintVision/AndroidManifest.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.tintvision"
+    package="com.tintvision"
     android:versionCode="1"
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="11"
+        android:minSdkVersion="14"
         android:targetSdkVersion="19" />
     
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
@@ -21,7 +21,7 @@
             	<category android:name="android.intent.category.LAUNCHER" />
         	</intent-filter>
         </activity>
-        <service android:name="com.example.tintvision.OverlayService" android:label="@string/app_name" android:enabled="true"></service>
+        <service android:name="com.tintvision.OverlayService" android:label="@string/app_name" android:enabled="true"></service>
     </application>
 
 </manifest>
