--- a/TintVision/AndroidManifest.xml
+++ b/TintVision/AndroidManifest.xml
@@ -22,6 +22,7 @@
         	</intent-filter>
         </activity>
         <service android:name="com.tintvision.OverlayService" android:label="@string/app_name" android:enabled="true"></service>
+        <service android:name="com.tintvision.UnderlinerService" android:label="@string/app_name" android:enabled="true"></service>
     </application>
 
 </manifest>
