Update: Changed package structure

--- a/AndroidStudio/TintVision/app/build.gradle
+++ b/AndroidStudio/TintVision/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "25.0.2"
 
     defaultConfig {
-        applicationId "com.tintvision"
+        applicationId "com.emcreations.tintvision"
         minSdkVersion 14
         targetSdkVersion 25
     }
