--- a/AndroidStudio/TintVision/app/src/main/AndroidManifest.xml
+++ b/AndroidStudio/TintVision/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.tintvision"
+    package="com.emcreations.tintvision"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -16,7 +16,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".HomeActivity"
+            android:name="com.emcreations.tintvision.HomeActivity"
             android:label="@string/app_name"
             android:launchMode="standard" >
             <intent-filter>
@@ -27,31 +27,31 @@
         </activity>
 
         <service
-            android:name=".OverlayService"
+            android:name="com.emcreations.tintvision.OverlayService"
             android:enabled="true"
             android:label="@string/app_name" >
         </service>
         <service
-            android:name=".UnderlinerService"
+            android:name="com.emcreations.tintvision.UnderlinerService"
             android:enabled="true"
             android:label="@string/app_name" >
         </service>
 
         <activity
-            android:name=".OverlaySettingsActivity"
+            android:name="com.emcreations.tintvision.OverlaySettingsActivity"
             android:label="@string/title_activity_overlay_settings"
-            android:parentActivityName=".HomeActivity" >
+            android:parentActivityName="com.emcreations.tintvision.HomeActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.tintvision.OverlayActivity" />
         </activity>
         <activity
-            android:name=".UnderlinerSettingsActivity"
+            android:name="com.emcreations.tintvision.UnderlinerSettingsActivity"
             android:label="@string/title_activity_underliner_settings"
-            android:parentActivityName=".HomeActivity" >
+            android:parentActivityName="com.emcreations.tintvision.HomeActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.tintvision.HomeActivity" />
+                android:value="com.emcreations.tintvision.HomeActivity" />
         </activity>
     </application>
 
