--- a/AndroidStudio/TintVision/app/build.gradle
+++ b/AndroidStudio/TintVision/app/build.gradle
@@ -19,6 +19,8 @@ android {
 }
 
 dependencies {
+    // Required -- JUnit 4 framework
+    testCompile 'junit:junit:4.12'
     compile 'com.android.support:support-v4:25.1.1'
     compile 'com.android.support:appcompat-v7:25.1.1'
     compile 'com.github.QuadFlask:colorpicker:0.0.13'
