--- a/AndroidStudio/TintVision/app/build.gradle
+++ b/AndroidStudio/TintVision/app/build.gradle
@@ -4,10 +4,15 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
 
+    configurations.all {
+        resolutionStrategy.force 'com.android.support:support-annotations:23.1.1'
+    }
+
     defaultConfig {
         applicationId "com.emcreations.tintvision"
         minSdkVersion 14
         targetSdkVersion 25
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
@@ -16,11 +21,16 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
+
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
 }
 
 dependencies {
     // Required -- JUnit 4 framework
     testCompile 'junit:junit:4.12'
+    testCompile 'com.android.support.test:runner:0.5'
     compile 'com.android.support:support-v4:25.1.1'
     compile 'com.android.support:appcompat-v7:25.1.1'
     compile 'com.github.QuadFlask:colorpicker:0.0.13'
