--- a/AndroidStudio/TintVision/app/src/main/AndroidManifest.xml
+++ b/AndroidStudio/TintVision/app/src/main/AndroidManifest.xml
@@ -14,7 +14,9 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:supportsRtl="true"
+        android:fullBackupContent="@xml/backup_descriptor">
         <activity
             android:name="com.emcreations.tintvision.HomeActivity"
             android:label="@string/app_name"
