--- a/AndroidStudio/TintVision/app/build.gradle
+++ b/AndroidStudio/TintVision/app/build.gradle
@@ -23,7 +23,7 @@ android {
     }
 
     testOptions {
-        unitTests.returnDefaultValues = true
+        unitTests.includeAndroidResources = true
     }
 }
 
@@ -31,6 +31,7 @@ dependencies {
     // Required -- JUnit 4 framework
     testCompile 'junit:junit:4.12'
     testCompile 'com.android.support.test:runner:0.5'
+    testImplementation "org.robolectric:robolectric:3.5.1"
     compile 'com.android.support:support-v4:25.1.1'
     compile 'com.android.support:appcompat-v7:25.1.1'
     compile 'com.github.QuadFlask:colorpicker:0.0.13'
