--- a/AndroidStudio/TintVision/app/build.gradle
+++ b/AndroidStudio/TintVision/app/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 27
+    buildToolsVersion '26.0.2'
 
     configurations.all {
         resolutionStrategy.force 'com.android.support:support-annotations:23.1.1'
@@ -11,7 +11,7 @@ android {
     defaultConfig {
         applicationId "com.emcreations.tintvision"
         minSdkVersion 14
-        targetSdkVersion 25
+        targetSdkVersion 27
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
@@ -30,9 +30,9 @@ android {
 dependencies {
     // Required -- JUnit 4 framework
     testCompile 'junit:junit:4.12'
-    testCompile 'com.android.support.test:runner:0.5'
+    testCompile 'com.android.support.test:runner:1.0.1'
     testImplementation "org.robolectric:robolectric:3.5.1"
-    compile 'com.android.support:support-v4:25.1.1'
-    compile 'com.android.support:appcompat-v7:25.1.1'
+    compile 'com.android.support:support-v4:27.0.1'
+    compile 'com.android.support:appcompat-v7:27.0.1'
     compile 'com.github.QuadFlask:colorpicker:0.0.13'
 }
