--- a/AndroidStudio/TintVision/app/src/main/AndroidManifest.xml
+++ b/AndroidStudio/TintVision/app/src/main/AndroidManifest.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.emcreations.tintvision"
-    android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionCode="2"
+    android:versionName="1.1" >
 
     <uses-sdk
         android:minSdkVersion="14"
-        android:targetSdkVersion="25" />
+        android:targetSdkVersion="27" />
 
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
@@ -45,7 +45,7 @@
             android:parentActivityName="com.emcreations.tintvision.HomeActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.tintvision.OverlayActivity" />
+                android:value="com.emcreations.tintvision.OverlaySettingsActivity" />
         </activity>
         <activity
             android:name="com.emcreations.tintvision.UnderlinerSettingsActivity"
