--- a/.gitignore
+++ b/.gitignore
@@ -35,8 +35,8 @@ captures/
 
 # Intellij
 *.iml
-AndroidStudio/.idea/workspace.xml
-.idea/libraries/
+AndroidStudio/TintVision/.idea/workspace.xml
+AndroidStudio/TintVision/.idea/libraries
 
 # Keystore files
 *.jks
