--- a/AndroidStudio/TintVision/app/src/main/AndroidManifest.xml
+++ b/AndroidStudio/TintVision/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:supportsRtl="true"
         android:fullBackupContent="@xml/backup_descriptor">
         <activity
-            android:name="com.emcreations.tintvision.HomeActivity"
+            android:name="com.emcreations.tintvision.activity.HomeActivity"
             android:label="@string/app_name"
             android:launchMode="standard" >
             <intent-filter>
@@ -29,31 +29,31 @@
         </activity>
 
         <service
-            android:name="com.emcreations.tintvision.OverlayService"
+            android:name="com.emcreations.tintvision.service.OverlayService"
             android:enabled="true"
             android:label="@string/app_name" >
         </service>
         <service
-            android:name="com.emcreations.tintvision.UnderlinerService"
+            android:name="com.emcreations.tintvision.service.UnderlinerService"
             android:enabled="true"
             android:label="@string/app_name" >
         </service>
 
         <activity
-            android:name="com.emcreations.tintvision.OverlaySettingsActivity"
+            android:name="com.emcreations.tintvision.activity.OverlaySettingsActivity"
             android:label="@string/title_activity_overlay_settings"
-            android:parentActivityName="com.emcreations.tintvision.HomeActivity" >
+            android:parentActivityName="com.emcreations.tintvision.activity.HomeActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.emcreations.tintvision.OverlaySettingsActivity" />
+                android:value="com.emcreations.tintvision.activity.OverlaySettingsActivity" />
         </activity>
         <activity
-            android:name="com.emcreations.tintvision.UnderlinerSettingsActivity"
+            android:name="com.emcreations.tintvision.activity.UnderlinerSettingsActivity"
             android:label="@string/title_activity_underliner_settings"
-            android:parentActivityName="com.emcreations.tintvision.HomeActivity" >
+            android:parentActivityName="com.emcreations.tintvision.activity.HomeActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.emcreations.tintvision.HomeActivity" />
+                android:value="com.emcreations.tintvision.activity.HomeActivity" />
         </activity>
     </application>
 
