--- a/AndroidStudio/TintVision/app/build.gradle
+++ b/AndroidStudio/TintVision/app/build.gradle
@@ -31,6 +31,10 @@ dependencies {
     // Required -- JUnit 4 framework
     testCompile 'junit:junit:4.12'
     testCompile 'com.android.support.test:runner:1.0.1'
+    // required if you want to use Mockito for unit tests
+    testCompile 'org.mockito:mockito-core:2.7.22'
+    // required if you want to use Mockito for Android tests
+    androidTestCompile 'org.mockito:mockito-android:2.7.22'
     testImplementation "org.robolectric:robolectric:3.5.1"
     compile 'com.android.support:support-v4:25.4.0'
     compile 'com.android.support:appcompat-v7:25.4.0'
